--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Cozy Cup</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
 
@@ -409,7 +413,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="The cozy cup.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="aboutus Cozy cup.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="Services Cozy Cup.html">Service</a></li>
         <li class="nav-item dropdown">
@@ -471,8 +475,8 @@
       <!-- Our Story -->
       <div class="col-md-4 mb-4 mb-md-0">
         <h3 class="fw-bold mb-3" style="font-size: 1.8rem;">Our Story</h3>
-        <p class="text-dark fs-5 mb-3">Eos kasd eos dolor vero vero, lorem stet diam rebum. Ipsum amet sed vero dolor sea</p>
-        <p class="text-muted" style="font-size: 1rem;">Takimata sed vero vero no sit sed, justo clita duo no duo amet et, nonumy kasd sed dolor eos diam lorem eirmod. Amet sit amet amet no. Est nonumy sed labore eirmod sit magna. Erat at est justo sit ut. Labor diam sed ipsum et eirmod</p>
+        <p class="text-dark fs-5 mb-3">The story of coffee begins in Ethiopia, where legend says a goat herder named Kaldi noticed his goats becoming energetic after eating berries from a certain shrub.</p>
+        <p class="text-muted" style="font-size: 1rem;">This discovery spread, eventually leading to coffee cultivation in Yemen and its popularity across the Middle East and beyond. </p>
         <a href="#" class="btn btn-dark mt-3 px-4 py-2">Learn More</a>
       </div>
 
@@ -484,7 +488,7 @@
       <!-- Our Vision -->
       <div class="col-md-4">
         <h3 class="fw-bold mb-3" style="font-size: 1.8rem;">Our Vision</h3>
-        <p class="text-muted fs-6">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+        <p class="text-muted fs-6">The vision of a coffee shop is its aspirational future goal, outlining what it aims to become and the impact it wants to have, often focusing on becoming a community hub, a leader in specialty coffee, or a globally recognized brand. </p>
         <ul class="list-unstyled mb-4 fs-6">
           <li class="mb-3"><i class="bi bi-check2-square text-warning me-2 fs-5"></i> Test</li>
           <li class="mb-3"><i class="bi bi-check2-square text-warning me-2 fs-5"></i> Vibe</li>
@@ -518,7 +522,7 @@
             </div>
             <h5 class="mb-0 fw-bold">Fastest Door Delivery</h5>
           </div>
-          <p class="text-muted mb-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+          <p class="text-muted mb-0">Get Your Coffee Fix, FAST! Enjoy our coffee shop's signature brews delivered hot and fresh, right to your door in minutes. Skip the line, not the quality. Order online now!</p>
         </div>
       </div>
 
@@ -532,7 +536,7 @@
             </div>
             <h5 class="mb-0 fw-bold">Fresh Coffee Beans</h5>
           </div>
-          <p class="text-muted mb-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+          <p class="text-muted mb-0">Exceptional beans are the foundation of every great cup of coffee. Therefore, source the finest coffee beans and roast them fresh to ensure each brew delivers unparalleled flavor and aroma.</p>
         </div>
       </div>
 
@@ -546,7 +550,7 @@
             </div>
             <h5 class="mb-0 fw-bold">Best Quality Coffee</h5>
           </div>
-          <p class="text-muted mb-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+          <p class="text-muted mb-0">From the first aroma to the last sip, our coffee is a testament to our commitment to quality, using only the finest beans and brewing methods.</p>
         </div>
       </div>
 
@@ -560,7 +564,7 @@
             </div>
             <h5 class="mb-0 fw-bold">Online Table Booking</h5>
           </div>
-          <p class="text-muted mb-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit invidunt, dolore tempor diam ipsum takima erat tempor</p>
+          <p class="text-muted mb-0">Book your perfect coffee break! Reserve a table online at our coffee shop and skip the wait. Enjoy our cozy ambiance and delicious offerings at your convenience.</p>
         </div>
       </div>
     </div>
@@ -603,7 +607,7 @@
           </div>
           <div>
             <h5 class="menu-title">Black Coffee</h5>
-            <p class="menu-desc">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+            <p class="menu-desc">Savor the moments, one cup of our signature black coffee at a time.</p>
           </div>
         </div>
 
@@ -615,7 +619,7 @@
           </div>
           <div>
             <h5 class="menu-title">Chocolet Coffee</h5>
-            <p class="menu-desc">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+            <p class="menu-desc">Hot Chocolate meets Coffee – It's a match made in heaven!</p>
           </div>
         </div>
 
@@ -627,7 +631,7 @@
           </div>
           <div>
             <h5 class="menu-title">Coffee With Milk</h5>
-            <p class="menu-desc">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+            <p class="menu-desc">Experience the comforting embrace of our Hot Coffee with Milk.</p>
           </div>
         </div>
       </div>
@@ -644,7 +648,7 @@
           </div>
           <div>
             <h5 class="menu-title">Black Coffee</h5>
-            <p class="menu-desc">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+            <p class="menu-desc">Savor the moments, one cup of our signature black coffee at a time.</p>
           </div>
         </div>
 
@@ -656,7 +660,7 @@
           </div>
           <div>
             <h5 class="menu-title">Chocolet Coffee</h5>
-            <p class="menu-desc">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+            <p class="menu-desc">Hot Chocolate meets Coffee – It's a match made in heaven!</p>
           </div>
         </div>
 
@@ -668,7 +672,7 @@
           </div>
           <div>
             <h5 class="menu-title">Coffee With Milk</h5>
-            <p class="menu-desc">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et lorem dolor</p>
+            <p class="menu-desc">Experience the comforting embrace of our Hot Coffee with Milk.</p>
           </div>
         </div>
       </div>
@@ -685,13 +689,12 @@
         <h1>30% OFF</h1>
         <h4>For Online Reservation</h4>
         <p>
-          Lorem justo clita erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo.
-          Erat justo sed sed diam. Ea et erat ut sed diam sea
+          Planning a meeting or a relaxing break? Book your table in advance and ensure a perfect experience at The Cozy Cup.
         </p>
         <ul>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
-          <li>Lorem ipsum dolor sit amet</li>
+          <li>Reserve your table</li>
+          <li>Book a table</li>
+          <li>Make a reservation!</li>
         </ul>
       </div>
 
@@ -743,11 +746,11 @@
           <div class="testimonial-info">
             <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Client">
             <div>
-              <div class="testimonial-client">Client Name</div>
-              <div class="testimonial-role">Profession</div>
+              <div class="testimonial-client">Dipti Patel</div>
+              <div class="testimonial-role">Lawyer</div>
             </div>
           </div>
-          <div class="testimonial-text">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elirmod clita lorem.</div>
+          <div class="testimonial-text"> This is a fun place with excellent coffee! We adore the roasts from Costa Rica and Guatemala. </div>
         </div>
 
         <!-- Card 2 -->
@@ -755,11 +758,11 @@
           <div class="testimonial-info">
             <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Client">
             <div>
-              <div class="testimonial-client">Client Name</div>
-              <div class="testimonial-role">Profession</div>
+              <div class="testimonial-client">Raj Shah</div>
+              <div class="testimonial-role">Gamer</div>
             </div>
           </div>
-          <div class="testimonial-text">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elirmod clita lorem.</div>
+          <div class="testimonial-text">Excellent atmosphere, delicious coffee, and outstanding baristas! In addition to general coffee drinks, they also provide bottled cold brew and nitro coffee. </div>
         </div>
 
         <!-- Card 3 -->
@@ -767,11 +770,11 @@
           <div class="testimonial-info">
             <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="Client">
             <div>
-              <div class="testimonial-client">Client Name</div>
-              <div class="testimonial-role">Profession</div>
+              <div class="testimonial-client">Sonali Rathod</div>
+              <div class="testimonial-role">Professor</div>
             </div>
           </div>
-          <div class="testimonial-text">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elirmod clita lorem.</div>
+          <div class="testimonial-text"> My preferred coffee shop. A great espresso is something that everyone can appreciate!</div>
         </div>
 
         <!-- Card 4 -->
@@ -779,11 +782,11 @@
           <div class="testimonial-info">
             <img src="https://randomuser.me/api/portraits/men/33.jpg" alt="Client">
             <div>
-              <div class="testimonial-client">Client Name</div>
-              <div class="testimonial-role">Profession</div>
+              <div class="testimonial-client">Vipul Modi</div>
+              <div class="testimonial-role">Corporate</div>
             </div>
           </div>
-          <div class="testimonial-text">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elirmod clita lorem.</div>
+          <div class="testimonial-text">They are experts in coffee brewing- Like all of their coffee; it is also pure and free of additional toxins.</div>
         </div>
 
         <!-- Card 5 -->
@@ -791,11 +794,11 @@
           <div class="testimonial-info">
             <img src="https://randomuser.me/api/portraits/women/55.jpg" alt="Client">
             <div>
-              <div class="testimonial-client">Client Name</div>
-              <div class="testimonial-role">Profession</div>
+              <div class="testimonial-client">Rehana Khan</div>
+              <div class="testimonial-role">Student</div>
             </div>
           </div>
-          <div class="testimonial-text">Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elirmod clita lorem.</div>
+          <div class="testimonial-text">You will only know the taste of fresh coffee once you taste this coffee shop coffee.</div>
         </div>
       </div>
     </div>
@@ -829,15 +832,15 @@
       <!-- Get in Touch -->
       <div class="col-md-3">
         <h5 class="text-uppercase fw-bold mb-4">Get In Touch</h5>
-        <p><i class="bi bi-geo-alt-fill me-2"></i>123 Street, New York, USA</p>
-        <p><i class="bi bi-telephone-fill me-2"></i>+012 345 67890</p>
+        <p><i class="bi bi-geo-alt-fill me-2"></i>123 Surat, Gujarat, India</p>
+        <p><i class="bi bi-telephone-fill me-2"></i>+91 1234 567 890</p>
         <p><i class="bi bi-envelope-fill me-2"></i>info@example.com</p>
       </div>
 
       <!-- Follow Us -->
       <div class="col-md-3">
         <h5 class="text-uppercase fw-bold mb-4">Follow Us</h5>
-        <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
+        <p>Brewing warmth and flavor in every cup. Visit us for handcrafted coffee and comfort food.</p>
         <div class="d-flex gap-2">
           <a href="#" class="btn btn-outline-light btn-sm rounded-0"><i class="bi bi-twitter"></i></a>
           <a href="#" class="btn btn-outline-light btn-sm rounded-0"><i class="bi bi-facebook"></i></a>
@@ -856,7 +859,7 @@
       <!-- Newsletter -->
       <div class="col-md-3">
         <h5 class="text-uppercase fw-bold mb-4">Newsletter</h5>
-        <p>Amet elitr vero magna sed ipsum sit kasd sea elitr lorem rebum</p>
+        <p>Sign Up for latest update and get in touch with us.</p>
         <form class="d-flex">
           <input type="email" class="form-control rounded-0" placeholder="Your Email">
           <button class="btn btn-gold text-dark rounded-0">Sign Up</button>
