--- a/Testimonial.html
+++ b/Testimonial.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Testimonials - The Cozy Cup</title>
+ <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Open+Sans&display=swap" rel="stylesheet">
@@ -250,8 +254,8 @@ footer {
       </div>
       <div class="col-md-4">
         <h5>Contact</h5>
-        <p><i class="bi bi-geo-alt-fill footer-icon"></i>123 Coffee Street, Brewtown</p>
-        <p><i class="bi bi-telephone-fill footer-icon"></i>+91 98765 43210</p>
+        <p><i class="bi bi-geo-alt-fill footer-icon"></i>123 Surat , Gujarat , Surat</p>
+        <p><i class="bi bi-telephone-fill footer-icon"></i>+91 1234 567 890</p>
         <p><i class="bi bi-envelope-fill footer-icon"></i>hello@thecozycup.com</p>
       </div>
       <div class="col-md-4">
