--- a/aboutus Cozy cup.html
+++ b/aboutus Cozy cup.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>About Us | The Cozy Cup</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <style>
@@ -250,10 +254,13 @@ footer {
       <div class="col-md-6">
         <h2 class="section-title">About Us</h2>
         <p class="lead">
-          Welcome to <strong>The Cozy Cup</strong>, where every sip feels like home. We're a passionate team of coffee lovers serving freshly brewed beverages and cozy vibes daily.
+          Welcome to <strong>The Cozy Cup</strong>, where every sip feels like home.
         </p>
-        <p>We believe coffee connects people, so we've built a space where community, comfort, and quality come together. Step in and feel the warmth of The Cozy Cup.</p>
-        <a href="menu.html" class="btn btn-gold mt-3">See Our Menu</a>
+        <p>Welcome to The Cozy Cup – Where Every Sip Feels Like Home.
+
+At The Cozy Cup, we believe that a great cup of coffee does more than wake you up — it brings people together, inspires conversation, and creates moments of warmth and connection. Nestled in the heart of the city, our café was founded with a simple goal: to create a space where comfort meets craft.</p>
+<p>Founded by passionate coffee lovers, The Cozy Cup began as a dream to blend high-quality brews with heartfelt hospitality. We started with a vision to serve not just beverages, but an experience — where the aroma of fresh coffee, the comfort of cozy interiors, and the sounds of friendly chatter create a sanctuary from the everyday hustle.</p>
+<p>From day one, we've committed ourselves to sourcing the finest beans from sustainable farms around the world, roasted to perfection, and brewed with precision. Whether you're a fan of bold espressos, creamy lattes, or refreshing cold brews, our menu is curated to satisfy every palate.</p>
       </div>
     </div>
 
@@ -261,11 +268,33 @@ footer {
     <div class="row text-center mb-5">
       <div class="col-md-6">
         <h4 class="text-uppercase text-warning">Our Mission</h4>
-        <p>To create the most comforting café experience through premium coffee, welcoming ambience, and sincere service.</p>
+        <p>At The Cozy Cup, our mission is to create a warm and inviting space where people from all walks of life can gather, relax, and enjoy exceptional coffee and handcrafted food. We are committed to:
+</p>
+          <ul>
+<li>Serving high-quality, ethically sourced coffee and ingredients.</li>
+<br>
+<li>Delivering outstanding customer experiences through genuine hospitality.</li>
+<br>
+<li>Fostering community connection and creative expression within our café walls.</li>
+<br>
+<li>Promoting sustainability through responsible sourcing and eco-friendly practices.</li>
+<br>
+We believe in making every cup, every meal, and every interaction count — with heart, precision, and care.
+</ul>
       </div>
       <div class="col-md-6">
         <h4 class="text-uppercase text-warning">Our Vision</h4>
-        <p>To be the favorite neighborhood café that sparks connections and crafts moments over every cup.</p>
+        <p>Our vision is to become a beloved neighborhood café known not just for our brews, but for the feeling we create — a sense of home, comfort, and connection. We aspire to:</p>
+<ul>
+<li>Be a go-to destination for coffee lovers, creatives, professionals, and friends alike.</li>
+<br>
+<li>Expand our presence while staying rooted in our values of quality, community, and sustainability.</li>
+<br>
+<li>Inspire moments of joy, reflection, and togetherness — one cozy cup at a time.</li>
+<br>
+At The Cozy Cup, we envision a future where cafés are more than places to drink coffee — they are hubs of warmth, creativity, and meaningful connection.
+</ul>
+
       </div>
     </div>
 
@@ -357,8 +386,8 @@ footer {
       </div>
       <div class="col-md-4">
         <h5>Contact</h5>
-        <p><i class="bi bi-geo-alt-fill footer-icon"></i>123 Coffee Street, Brewtown</p>
-        <p><i class="bi bi-telephone-fill footer-icon"></i>+91 98765 43210</p>
+        <p><i class="bi bi-geo-alt-fill footer-icon"></i>123 Surat, Gujarat , India</p>
+        <p><i class="bi bi-telephone-fill footer-icon"></i>+91 1234 567 890</p>
         <p><i class="bi bi-envelope-fill footer-icon"></i>hello@thecozycup.com</p>
       </div>
       <div class="col-md-4">
