--- a/contact us cozy cup.html
+++ b/contact us cozy cup.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us - The Cozy Cup</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
@@ -201,16 +205,19 @@ footer {
         </div>
         <div class="col-lg-6">
           <h2 class="mb-4">Visit Us</h2>
-          <p><i class="fas fa-map-marker-alt me-2"></i>123 Brew Lane, Coffeeville, CA 90210</p>
-          <p><i class="fas fa-phone me-2"></i>+1 234 567 8901</p>
+          <p><i class="fas fa-map-marker-alt me-2"></i>123 Surat , Gujarat , India</p>
+          <p><i class="fas fa-phone me-2"></i>+91 1234 567 890</p>
           <p><i class="fas fa-envelope me-2"></i>hello@thecozycup.com</p>
           <div class="ratio ratio-4x3 mt-3">
-            <iframe
-              src="https://maps.google.com/maps?q=New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
-              allowfullscreen
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+           <iframe
+  src="https://maps.google.com/maps?q=Surat%2C%20Gujarat&t=&z=13&ie=UTF8&iwloc=&output=embed"
+  width="100%"
+  height="400"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
           </div>
         </div>
       </div>
@@ -227,8 +234,8 @@ footer {
       </div>
       <div class="col-md-4">
         <h5>Contact</h5>
-        <p><i class="bi bi-geo-alt-fill footer-icon"></i>123 Coffee Street, Brewtown</p>
-        <p><i class="bi bi-telephone-fill footer-icon"></i>+91 98765 43210</p>
+        <p><i class="bi bi-geo-alt-fill footer-icon"></i>123 Surat , Gujarat , India</p>
+        <p><i class="bi bi-telephone-fill footer-icon"></i>+91 1234 567 890</p>
         <p><i class="bi bi-envelope-fill footer-icon"></i>hello@thecozycup.com</p>
       </div>
       <div class="col-md-4">
